
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/splash_title"
        android:textColor="#00FF00"
        android:gravity="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/splash_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/splash_message"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/splash_sign_in_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#f0f0f0"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/splash_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in_why"
            android:textColor="#808080" />
    </LinearLayout>

</RelativeLayout>